--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -134,7 +134,7 @@ jobs:
       - name: Lint module ${{ matrix.module }}
         run: nf-core modules lint ${{ matrix.module }}
 
-  confirm-pass:
+  confirm-lint-pass:
     runs-on: ubuntu-latest
     needs: [nf-core-lint-modules]
     if: always()
