--- a/.github/workflows/nf-test.yml
+++ b/.github/workflows/nf-test.yml
@@ -105,7 +105,7 @@ jobs:
           total_shards: ${{ env.TOTAL_SHARDS }}
           paths: "${{ join(fromJson(needs.nf-test-changes.outputs.paths), ' ') }}"
 
-  confirm-test-pass:
+  confirm-pass:
     runs-on: ubuntu-latest
     needs: [nf-test]
     if: always()
