use correct exclude statement

--- a/.github/workflows/gpu-tests.yml
+++ b/.github/workflows/gpu-tests.yml
@@ -99,6 +99,8 @@ jobs:
             profile: conda
           - tags: parabricks/fq2bammeth
             profile: conda
+          - tags: parabricks/dbsnp
+            profile: conda
 
     env:
       NXF_ANSI_LOG: false
