--- a/.github/workflows/nf-test.yml
+++ b/.github/workflows/nf-test.yml
@@ -254,6 +254,7 @@ jobs:
           - path: modules/nf-core/parabricks/fq2bammeth
           - path: modules/nf-core/parabricks/fq2bam
           - path: modules/nf-core/parabricks/applybqsr
+          - path: modules/nf-core/parabricks/dbsnp
           - profile: conda
             path: subworkflows/nf-core/vcf_annotate_ensemblvep
           - profile: conda
