--- a/modules/nf-core/sourcepredict/.pre-commit-config.yaml
+++ b/modules/nf-core/sourcepredict/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 repos:
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: "v3.1.0"
+    rev: "v4.0.0-alpha.8"
     hooks:
       - id: prettier
