--- a/modules/nf-core/coptr/estimate/meta.yml
+++ b/modules/nf-core/coptr/estimate/meta.yml
@@ -26,7 +26,7 @@ input:
     - pkl:
         type: file
         description: Python pickle file containing coverage maps
-        pattern: "*.{.pkl}"
+        pattern: "*.pkl"
         ontologies:
             - edam: "http://edamontology.org/format_4002"
 
