--- a/modules/nf-core/coptr/estimate/meta.yml
+++ b/modules/nf-core/coptr/estimate/meta.yml
@@ -40,7 +40,7 @@ output:
       - "*.csv":
           type: file
           description: CSV table with rows as reference genomes, columns samples and entries as log2 PTR
-          pattern: "*.{.csv}"
+          pattern: "*.csv"
           ontologies:
               - edam: "http://edamontology.org/format_3752"
 
